[gd_scene load_steps=4 format=3 uid="uid://df0hd305qg1wu"]

[ext_resource type="Script" uid="uid://bow76ughhfwef" path="res://Harm/spike.gd" id="1_7k7bx"]
[ext_resource type="Texture2D" uid="uid://vtoh7a35fguf" path="res://Assets/spike.png" id="1_8ryga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ryga"]
size = Vector2(12, 32)

[node name="Spike" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_7k7bx")

[node name="Spike" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_8ryga")

[node name="CollisionShapeArea" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_8ryga")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, 7)
collision_mask = 6
collide_with_areas = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShapeBody" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -16)

[node name="FallingRay" type="RayCast2D" parent="."]
target_position = Vector2(0, 500)
